--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "common"]
 	path = common
-	url = https://github.com/joshuamr/micro-services-course-common
+	url = https://github.com/joshuamr/micro-services-course-common.git
