--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -3,8 +3,7 @@ on:
   pull_request
   
 jobs: 
-  build:
-    name: auth-test
+  auth-test:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
