--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -6,5 +6,17 @@ jobs:
   auth-test:
     runs-on: ubuntu-latest
     steps: 
-      - uses: actions/checkout@v2
-      - run: cd auth && npm install && npm run test:ci
+      - name: Get code
+        uses: actions/checkout@v2
+      - name: Cache dependencies
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: auth/package-lock.json
+      - name: Change into auth dir
+        run: cd auth 
+      - name: Install dependencies
+        run: npm install 
+      - name: Run tests
+        run: npm run test:ci
