Trying with actions again

--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -8,14 +8,16 @@ jobs:
     steps: 
       - name: Get code
         uses: actions/checkout@v2
-      - name: Cache dependencies
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: 'npm'
-          cache-dependency-path: auth/package-lock.json
+      # - name: Cache dependencies
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 16
+      #     cache: 'npm'
+      #     cache-dependency-path: auth/package-lock.json
       - name: Change into auth dir
         run: cd auth 
+      - name: pwd
+        run: pwd
       - name: Install dependencies
         run: npm install 
       - name: Run tests
