--- a/.github/workflows/tests-tickets.yml
+++ b/.github/workflows/tests-tickets.yml
@@ -9,12 +9,12 @@ jobs:
     steps: 
       - name: Get code
         uses: actions/checkout@v2
-      - name: Cache dependencies
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: 'npm'
-          cache-dependency-path: tickets/package-lock.json
+      # - name: Cache dependencies
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 16
+      #     cache: 'npm'
+      #     cache-dependency-path: tickets/package-lock.json
       - name: Change into tickets dir
         run: cd tickets 
       - name: Install dependencies
